Beginning work on non-functional requirements. Yes, I should have started this earlier. Too bad!

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -307,7 +307,7 @@ I'm leaving this section until we finalize section 5 and beyond. It won't take l
 
 This section provides general information about the system.  It identifies the
 interfaces between the system and its environment, describes the user
-characteristics and lists the system constraints.  \\\\
+characteristi	cs and lists the system constraints.  \\\\
 \subsection{System Context}
 
 This system in theory is very simple. An array of sensors grabs info regarding the position, speed, orientation, etc. and uses that information to understand the current state of the user. This data is then used to generate prompts that the user will answer and all the collected data is compiled, processed and stored within the system. Finally, researchers will analyze the collected data and generate observations. 
@@ -974,6 +974,10 @@ be covered in the Verification and Validation document.}
     given.  To make the NFR verifiable a statement could be made that the tests
     from a given section of the VnV plan can be successfully run on all of the
     possible operating environments.}
+
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Understandability}:]
+  \textbf{Understandability} test test text gen
+
 
 \item Other NFRs that might be discussed include verifiability,
   understandability and reusability.
