beginning to fill out NFR3: Maintainability

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -965,7 +965,7 @@ be covered in the Verification and Validation document.}
   \textbf{Maintainability} \plt{The effort required to make any of the likely
     changes listed for \progname{} should be less than FRACTION of the original
     development time.  FRACTION is then a symbolic constant that can be defined
-    at the end of the report.}
+    at the end of the report.} Once completed, the system should be entirely maintenance free for the time period it is used for EMA (7 to 14 days). The participants should not have perform any maintenance actions at all during this period, and the researchers at most should have to recharge the batteries of the system and update the parameters they set for the next set of EMA.
 
 \item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Portability}:]
   \textbf{Portability} \plt{This NFR is easier to write than the others.  The
@@ -975,8 +975,8 @@ be covered in the Verification and Validation document.}
     from a given section of the VnV plan can be successfully run on all of the
     possible operating environments.}
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Understandability}:]
-  \textbf{Understandability} test test text gen
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Cleanabiity}:]
+  \textbf{Cleanability} test test text gen
 
 
 \item Other NFRs that might be discussed include verifiability,
